Update the Playground for iTune API.

--- a/uchicago-cloud-photo-timeline-session2-a/cron.yaml
+++ b/uchicago-cloud-photo-timeline-session2-a/cron.yaml
@@ -3,5 +3,8 @@
 cron:
 - description: daily summary job
   url: /tasks/summary_email/
-  #target: beta
   schedule: every 1 minutes
+
+- description: weekly summary job
+  url: /logging/
+  schedule: every 5 minutes
