--- a/uchicago-cloud-photo-timeline-session2-b/queue.yaml
+++ b/uchicago-cloud-photo-timeline-session2-b/queue.yaml
@@ -3,6 +3,7 @@
 queue:
   # Change the refresh rate of the default queue from 5/s to 1/s.
 - name: default
+  target: api-backend
   rate: 1/s
 
 - name: worker-a
